WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30521
Forcefully set antialiasing for Chromium media controls to prevent flaky layout tests.
https://bugs.webkit.org/show_bug.cgi?id=30521
Summary
Forcefully set antialiasing for Chromium media controls to prevent flaky layo...
Andrew Scherkus
Reported
2009-10-19 10:37:32 PDT
Apparently sometimes it would true, other times false causing layout tests to fail.
Attachments
Round 1
(1.34 KB, patch)
2009-10-19 10:39 PDT
,
Andrew Scherkus
levin
: review+
ajwong
: commit-queue-
Details
Formatted Diff
Diff
Round 1 + ChangeLog fix
(1.41 KB, patch)
2009-10-19 11:07 PDT
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
Round 1 + ChangeLog fix (no tabs)
(1.42 KB, patch)
2009-10-19 11:08 PDT
,
Andrew Scherkus
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andrew Scherkus
Comment 1
2009-10-19 10:39:32 PDT
Created
attachment 41429
[details]
Round 1 One-liner!
David Levin
Comment 2
2009-10-19 10:58:11 PDT
Comment on
attachment 41429
[details]
Round 1 Since this affects more than layout tests, please add a little something to explain why this is good for those cases too.
Andrew Scherkus
Comment 3
2009-10-19 11:07:47 PDT
Created
attachment 41431
[details]
Round 1 + ChangeLog fix
Andrew Scherkus
Comment 4
2009-10-19 11:08:47 PDT
Created
attachment 41432
[details]
Round 1 + ChangeLog fix (no tabs)
Albert J. Wong
Comment 5
2009-10-19 12:20:19 PDT
Committed latest patch #3 as
r49799
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug