Forcefully set antialiasing for Chromium media controls.

Patch by Andrew Scherkus <scherkus@chromium.org> on 2009-10-19
Reviewed by NOBODY (OOPS!).

https://bugs.webkit.org/show_bug.cgi?id=30521

Before it was nondeterministiacally being enabled based on the previous state of GraphicsContext.

Covered by existing layout tests.

* rendering/RenderMediaControlsChromium.cpp:
(WebCore::paintMediaSlider): Added setShouldAntialias(true).

Canonical link: https://commits.webkit.org/41253@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49799 268f45cc-cd09-0410-ab3c-d52691b4dbfc