WebCore/rendering/RenderMediaControlsChromium.cpp
@@ -107,6 +107,7 @@ static bool paintMediaSlider(RenderObject* object, const RenderObject::PaintInfo
     // FIXME: this should be a rounded rect but need to fix GraphicsContextSkia first.
     // https://bugs.webkit.org/show_bug.cgi?id=30143
     context->save();
+    context->setShouldAntialias(true);
     context->setStrokeStyle(SolidStroke);
     context->setStrokeColor(style->borderLeftColor());
     context->setStrokeThickness(style->borderLeftWidth());
